--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=captacao
+DB_DATABASE=acad
 DB_USERNAME=postgres
 DB_PASSWORD=123
 
